routing path with data and query parameter

--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,8 +1,9 @@
 <div class="row">
   <div class="col-xs-12 col-sm-4">
+    
     <div class="list-group">
       <a
-        href="#"
+        [routerLink]="['/server', server.id]"
         class="list-group-item"
         *ngFor="let server of servers">
         {{ server.name }}
@@ -10,8 +11,10 @@
     </div>
   </div>
   <div class="col-xs-12 col-sm-4">
+    
     <app-edit-server></app-edit-server>
     <hr>
+    <button class="btn btn-primary" (click)="onServerLoad()">Load Server</button>
     <app-server></app-server>
   </div>
 </div>
